feat: introduce Hero and Pricing sections, along with Button and Card UI components, and update Tailwind config and dependencies.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     content="FlowSite AI - Premium web development and AI automation agency. We build modern websites and intelligent automation workflows to transform your business." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Lora:wght@400;500;600;700&display=swap" rel="stylesheet">
   <title>FlowSite AI - Web Development & AI Automation Agency</title>
 </head>
 
